2007-08-25  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-langs.el (c-other-decl-block-key-in-symbols-alist):
	new language variable.

	* progmodes/cc-engine.el (c-brace-anchor-point): new function.
	(c-add-stmt-syntax): Give accurate anchor points for "namespace",
	"extern" etc., rather than BOI.  Fix addition of spurious
	syntactic-symbol 'defun-block-intro, replacing it with
	'innamespace, etc.

2007-08-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* pcvs.el (cvs-query-directory): Only prompt when prefix is given.
	Don't behave differently when executed via M-x.  Add doc string.

2007-08-24  Ulrich Mueller  <ulm@gentoo.org>  (tiny change)

	* files.el (backup-buffer-copy): Don't wrap delete in
	condition-case, only try to delete if file exists.

2007-08-24  Glenn Morris  <rgm@gnu.org>

	* files.el (backup-buffer-copy): Revert 2007-08-22 change.

2007-08-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/cperl-mode.el (defcustom, x-color-defined-p, cperl-is-face)
	(cperl-is-face, cperl-force-face, cperl-etags-snarf-tag, cperl-mode)
	(cperl-etags-snarf-tag, cperl-etags-goto-tag-location, cperl-init-faces)
	(cperl-etags-goto-tag-location): Use new style backquotes.

	* subr.el (complete-with-action): Backport from trunk (for vc-arch.el).
	(dynamic-completion-table): Use it it.

	* net/browse-url.el: Remove spurious * in custom docstrings.
	(browse-url-filename-alist): Use new-style backquote.

	* emacs-lisp/backquote.el (backquote-unquote-symbol)
	(backquote-splice-symbol): Clarify they're not new-style unquotes.

	* emacs-lisp/edebug.el (edebug-list-form, edebug-match-symbol, \,)
	(\,@): Backslash the , and ,@ which are not new-style unquotes.

	* textmodes/texinfmt.el (\,): Clarify it's not a new-style unquote.

	* net/socks.el (socks-username/password-auth-filter):
	Remove unused vars `state' and `desired-len'.
	(socks-parse-services, socks-nslookup-host): Use with-current-buffer.
	(socks-wait-for-state-change): Use new-style backquotes.
