@@ -81,7 +81,7 @@ in to make it use the scrollbars from the system theme.
 
 * Lisp Changes in Emacs 22.2.
 
-** The function text-invisible-p returns non-nil if the character
+** The function invisible-p returns non-nil if the character
    after a specified position is invisible.
 
 +++
